--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rand = "0.9.2"
+axum = "0.8.6"
+http = "1.3.1"
 num_cpus = "1.17.0"
+rand = "0.9.2"
+serde = { version = "1.0.228", features = ["derive"] }
+tokio = { version = "1.48.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
